Added the concept of template routes to the route loader.

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
       "name": "windhandelj",
       "email": "jeff@goaldriven.com"
     }
-  ]
+  ],
+  "dependencies": {
+    "lodash": "^2.4.1"
+  }
 }
