--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "route-loader",
+  "name": "routeloader",
   "author": "Logan Knecht",
   "main": "lib/index.js",
   "version": "0.1.0",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Bill4Time/route-loader"
+    "url": "https://github.com/Bill4Time/routeloader"
   },
   "keywords": [
     "node",
@@ -20,9 +20,9 @@
   ],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Bill4Time/route-loader/issues"
+    "url": "https://github.com/Bill4Time/routeloader/issues"
   },
-  "homepage": "https://github.com/Bill4Time/route-loader",
+  "homepage": "https://github.com/Bill4Time/routeloader",
   "maintainers": [
     {
       "name": "loganknecht",
